--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Index</title>
+	<title>Venator</title>
 
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
@@ -23,7 +23,7 @@
 
 
 
-		<a class="navbar-brand" href="#"><img class="logo-navbar" src="../images/logo_again.PNG" alt="logo">Venator</a>
+		<a class="navbar-brand" href="#"><img class="logo-navbar" src="../images/logo_again.png" alt="logo">Venator</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
 			aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -764,7 +764,7 @@
 			<div class="flip-card">
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
-						<img class="logo-image" src="../images/logo_again.PNG" alt="logo">
+						<img class="logo-image" src="../images/logo_again.png" alt="logo">
 						<blockquote class="blockquote text-center">
 							<p class="mb-0 mt-3">We are what we repeatedly do. Excellence, then, is not an act, but a
 								habit.</p>
@@ -786,7 +786,7 @@
 			<div class="flip-card">
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
-						<img class="logo-image" src="../images/logo_again.PNG" alt="logo">
+						<img class="logo-image" src="../images/logo_again.png" alt="logo">
 						<blockquote class="blockquote text-center">
 							<p class="mb-0 mt-3">Waste no more time arguing about what a good man should be. Be one.</p>
 							<footer class="blockquote-footer">Marcus Aurelius</footer>
@@ -810,7 +810,7 @@
 			<div class="flip-card">
 				<div class="flip-card-inner">
 					<div class="flip-card-front">
-						<img class="logo-image" src="../images/logo_again.PNG" alt="logo">
+						<img class="logo-image" src="../images/logo_again.png" alt="logo">
 						<blockquote class="blockquote text-center">
 							<p class="mb-0 mt-3">The secret of change is to focus all of your energy, not on fighting
 								the old, but building on the new.</p>
