--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -936,7 +936,7 @@
 			</div>
 		</div>
 		<div class="row brand-row">
-			<img class="logo-footer" src="../images/logo_again.PNG" alt="logo">
+			<img class="logo-footer" src="../images/logo_again.png" alt="logo">
 			<p class="brand-title">Venator</p>
 		</div>
 		<div class="row z-row">
