--- a/src/main/resources/static/views/index.html
+++ b/src/main/resources/static/views/index.html
@@ -738,6 +738,24 @@
 			</div>
 		</div>
 
+		<div class="modal draggable fade" id="reservation-unavailable-modal"
+			tabindex="-1" role="dialog" aria-labelledby="reservationModalLabel"
+			aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close success-close"
+							data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<p class="reservation-unavailable-message"></p>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<div class="modal draggable fade" id="successful-search-modal"
 			tabindex="-1" role="dialog" aria-labelledby="reservationModalLabel"
 			aria-hidden="true">
